--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "spotify-types": "^1.0.7",
     "typescript": "^5.1.6"
   }
 }
