--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^1.4.0",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
+    "react-bottom-drawer": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
