--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-bottom-drawer": "^0.1.1",
     "react-dom": "^18.2.0",
