--- a/package.json
+++ b/package.json
@@ -3,26 +3,25 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.3.1",
+    "@vitejs/plugin-react-swc": "^3.4.0",
+    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-bottom-drawer": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.16.0",
     "react-use-websocket": "^4.4.0",
-    "web-vitals": "^2.1.4"
+    "spotify-types": "^1.0.7",
+    "vite": "^4.4.9",
+    "vite-plugin-svgr": "^4.0.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "cross-env PUBLIC_URL=https://musicpicker.danielgurbin.com react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage --watch=false"
   },
   "eslintConfig": {
     "extends": [
@@ -43,12 +42,10 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^29.5.5",
-    "@types/node": "^20.5.1",
-    "@types/react": "^18.2.21",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "@types/react-router-dom": "^5.3.3",
-    "spotify-types": "^1.0.7",
-    "typescript": "^5.2.2"
+    "@vitest/coverage-v8": "^0.34.5",
+    "jsdom": "^22.1.0",
+    "vitest": "^0.34.5"
   }
 }
